--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TITRE 1</title>
+    <h1>premier exo</h1>
 </head>
 <body>
     <p>premiers changements</p>
